# keystone

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  ONE_SHOT_PROMPT.md  README.md  TODO.md  bootstrap_devcontainer.py  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  time_cdf_analysis.html  version.py
bootstrap_devcontainer/: pyproject.toml
bootstrap_devcontainer/src/bootstrap_devcontainer/: __init__.py  agent_cache.py  agent_log.py  agent_runner.py  bootstrap_devcontainer_cli.py  cli.py  constants.py  git_utils.py  modal_runner.py  process_runner.py  prompts.py  schema.py
bootstrap_devcontainer/tests/: fake_agent.py  test_agent_log.py  test_bootstrap.py  test_report_parsers.py
bootstrap_devcontainer/tests/__snapshots__/: test_bootstrap.ambr
eval/: pyproject.toml  test_local_worker.py
evals/: README.md  __init__.py  cli.py  config.py  conftest.py  delete_failed_runs_cli.py  eval_cli.py  eval_schema.py  flow.py  git_utils.py  mutation_cli.py  mutation_flow.py  prefect.yaml  pyproject.toml  test_eval_cli_fake_agents.py  test_eval_flow.py  test_eval_modal.py  test_local_worker.py  test_mutation_flow.py  test_repos_jsonl.py  test_tiny_codex.py  worker.py
evals/eda/: .gitignore  README.md  cat_eval_analysis.py  cdf_plot.py  enrich_test_counts.py  eval_to_parquet_cli.py  fetch_repos.py  filtered_repos.jsonl  keystone_eval_analysis.ipynb  keystone_eval_comparison.ipynb  load_s3_eval_results.ipynb  marimo_box_plots_for_blog.py  marimo_canonical_tests.py  marimo_cdfs_for_blog.py  marimo_test_winners.py  merge_repo_lists.py  merged_repo_list_proposal.jsonl  repo_explorer.ipynb  repo_filter.html  repo_filter.ipynb  run_deep_dive.ipynb  selected_repos.jsonl  test_discovery_analysis.py  test_time_cdf_hover.py  test_time_cdf_snapshot.py  time_cdf_analysis.py  time_cdf_plot.py
evals/examples/: 2026-03-04_cat_v1.json  2026-03-06_four_model_cat.json  2026-03-06_four_model_v1.json  2026-03-07_four_model_thad.json  2026-03-18-cat-gpt54-rerun.json  2026-03-18-cat.json  agent_config.json5  broken_repos.jsonl  four_model_comparison.json  four_model_thad.json  mutation_test_single_repo.json  opencode_samples.json  repo_list.jsonl  repos.jsonl  repos_tiny.jsonl  repos_with_mutations.jsonl  thad_eval.json  tiny_four_model_test.json  tiny_repos.jsonl  tiny_two_model_test.json
evals/scripts/: dump_per_repo_results.py  label_canonical_tests.sh  populate_commit_hashes.py  validate_canonical_tests.py
evals/test_data/tiny_codex/: config.json  repos.jsonl
evals/viewer/: generate_viewer.py
evals/viz/: viz.ipynb
keystone/: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
keystone/scripts/: pytest-discovery  typecheck
keystone/src/bootstrap_devcontainer/: __init__.py  agent_log.py  agent_runner.py  bootstrap_devcontainer_cli.py  constants.py  keystone_cli.py  process_runner.py  prompts.py  version.py
keystone/src/keystone/: __init__.py  agent_log.py  agent_runner.py  cached_runner.py  docker_utils.py  evaluator.py  git_utils.py  guardrail.sh  junit_report_parser.py  keystone_budget.sh  keystone_cli.py  logging_utils.py  process_runner.py  prompts.py  repro_verify.py  schema.py  timeouts.py  version.py
keystone/tests/: conftest.py  fake_agent.py  fake_claude_agent.py  fake_codex_agent.py  snapshot_ext.py  test_agent_log.py  test_bootstrap.py  test_broken_commit_verification.py  test_budget_modal.py  test_cli.py  test_cost_monitor.py  test_e2e_agentic.py  test_e2e_fake_agent.py  test_evaluator.py  test_guardrail.py  test_llm_provider.py  test_modal_logging.py  test_modal_runner.py  test_prompts.py  test_report_parsers.py  test_submodule_archive.py
keystone/tests/__snapshots__/: test_bootstrap.ambr  test_e2e_agentic.ambr  test_prompts.ambr
modal_registry/: DEPLOYMENT.md  README.md  app.py  build_caching_test.py  conftest.py  load_test.py  load_test_v2.py  mirror_registry_app.py  mirror_registry_config.yml  pyproject.toml  registry_config.yml
sculptor/: DEVELOPING.md  MANIFEST.in  README.md  conftest.py  download_mutagen  justfile  pyproject.toml  pytest.ini
sculptor/builder/: artifacts.py  build-sidecar.sh  cli.py  justfile  package-sculptor-x86_64.sh  test-sculptor-desktop-acceptance.sh  test_artifacts.py  validate_sculptor_dmg.sh
sculptor/claude-container/: .gitignore  Dockerfile.base_nix  README.md  check_tool_readiness.sh  imbue-cli.sh  imbue_version.json  pyproject.toml  test_check_tool_readiness.py
sculptor/claude-container/proxy/: claude_code_proxy.py  codex_proxy.py  proxy_utils.py
sculptor/docker/: 67_install_claude.sh  Dockerfile  Dockerfile.slim  README.md  cached_image_hash.txt  cached_modal_docker_cache.json  cached_modal_image_id.txt
sculptor/docs/: glossary.md  open_questions_for_after_release.md  overview.md  sculptor_mode_configuration.md  sis_testing.md  testing.md
sculptor/docs/diagrams/: git_sync_state_diagram.excalidraw  high_level_components.txt  high_level_flow.txt  request_flow.txt
sculptor/docs/proposals/: billing.md  config_service.md  local_sync_lifecycle.md  shutdown.md
sculptor/frontend/: .gitignore  dev-app-update.yml  eslint.config.ts  forge.config.ts  jest.config.ts  package.json  tsconfig.json  vite.config.ts  vite.renderer.config.ts
sculptor/frontend/.storybook/: preview.tsx
sculptor/frontend/config/: entitlements.mac.plist
sculptor/frontend/docs/: desktop_app.md  frontend_tech_stack.md  helpful_commands.md  style.md
sculptor/frontend/src/: App.tsx  Main.tsx  Router.tsx  apiClient.ts  globals.d.ts  index.css  instrument.ts  preload.ts
sculptor/keys/: README.txt  private_test.pem  public_test.pem
sculptor/posthog/: README.md
sculptor/posthog/docs/: adding_events.md
sculptor/posthog/sql/: README.md  agent_response_after_imbue_verify.sql  num_failing_onboarding_sessions.sql  time_to_first_token_cold_start.sql  tool_use_types.sql  (+1 more)
sculptor/proxy-viewer/: .gitignore  proxy_server.py  requirements.txt
sculptor/sculptor/: conftest.py  constants.py  pyre_test.py  startup_checks.py  startup_checks_test.py  version.py  version_test.py
sculptor/tests/: conftest.py
(+975 files in other folders)
