[project]
name = "build-config-aphq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "nbformat>=4.2.0",
    "plotly>=6.5.2",
]

[tool.uv.workspace]
members = ["keystone", "evals", "modal_registry"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "modal>=1.3.1",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["github_datasets", "samples", "prototypes"]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PLC",    # pylint conventions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard typer pattern)
    "G004",   # f-string in logging (cleaner than % formatting)
]

[tool.ruff.lint.isort]
known-first-party = ["keystone", "evals"]

# Pyright config in pyrightconfig.json (needs explicit include to avoid hanging on symlinks)
