[project]
name = "keystone-monorepo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "nbformat>=4.2.0",
    "plotly>=6.5.2",
    "kystn",
    "evals",
    "modal_registry",
    "polars>=1.39.0",
    "marimo>=0.20.4",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
]

[tool.uv.workspace]
members = ["keystone", "evals", "modal_registry"]

[tool.uv.sources]
kystn = { workspace = true }
evals = { workspace = true }
modal_registry = { workspace = true }


[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "modal>=1.3.1",
    "pytest>=8.0.0",
    "pytest-xdist>=3.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["github_datasets", "samples", "prototypes"]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# marimo notebooks use inline imports, bare expressions for display, and unused args for reactive deps
"evals/eda/test_discovery_analysis.py" = ["PLC0415", "B018", "ARG001", "I001"]
"evals/eda/marimo_cdfs_for_blog.py" = ["PLC0415", "B018", "ARG001", "I001"]
"evals/eda/marimo_box_plots_for_blog.py" = ["PLC0415", "B018", "ARG001", "I001"]
"evals/eda/marimo_canonical_tests.py" = ["PLC0415", "B018", "ARG001", "I001"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PLC",    # pylint conventions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard typer pattern)
    "G004",   # f-string in logging (cleaner than % formatting)
]

[tool.ruff.lint.isort]
known-first-party = ["keystone", "evals"]

# Pyright config in pyrightconfig.json (needs explicit include to avoid hanging on symlinks)

[tool.marimo.runtime]
auto_instantiate = true
on_cell_change = "autorun"
auto_reload = "autorun"

