[project]
name = "bootstrap-devcontainer"
version = "0.1.0"
description = "Automatically generates a working .devcontainer/ setup for any project using an AI agent"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.3.1",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.0",
    "syrupy>=4.0.0",
    "typer>=0.21.1",
]

[project.scripts]
bootstrap-devcontainer = "bootstrap_devcontainer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap_devcontainer"]

[tool.pytest.ini_options]
markers = [
    "manual: marks tests as manual (deselect with '-k not manual')",
]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
addopts = "-s"
