[project]
name = "eval"
version = "0.1.0"
description = "Eval harness for bootstrap_devcontainer"
requires-python = ">=3.10"
dependencies = [
    "bootstrap-devcontainer",  # The main package (install from git or local)
    "pydantic>=2.0",
    "prefect>=3.0",
    "typer>=0.9",
    "rich>=13.0",
    "json5>=0.9",
    "boto3>=1.28",
]

[project.optional-dependencies]
modal = ["modal>=0.60"]

[project.scripts]
eval-harness = "eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = { "." = "" }
