[project]
name = "modal-registry"
version = "0.1.0"
description = "Modal-based Docker registry cache for bootstrap-devcontainer builds"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = { "." = "" }
